@@ -1,6 +1,6 @@
 Package: rebook
-Version: 1.1.7
-Date: 2021-01-20
+Version: 1.1.8
+Date: 2021-01-31
 Title: Re-using Content in Bioconductor Books
 Authors@R:
     person("Aaron", "Lun", email="infinite.monkeys.with.keyboards@gmail.com", role=c("aut", "cre", "cph"))
@@ -21,7 +21,8 @@ Suggests:
     testthat,
     igraph,
     XML,
-    BiocManager
+    BiocManager,
+    RCurl
 License: GPL-3
 VignetteBuilder: knitr
 biocViews:
