@@ -9,6 +9,7 @@ export(collapseStart)
 export(compileChapter)
 export(configureBook)
 export(createMakefile)
+export(createRedirects)
 export(deployCustomCSS)
 export(extractCached)
 export(extractFromPackage)
